security/cert-bot/application/ingress.yaml

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: minimal-ingress
  namespace: login
  annotations:
    cert-manager.io/issuer: "test-selfsigned"
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - "argo.benz.in"
    secretName: selfsigned-cert-tls
  rules:
  - host: "argo.benz.in"
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: flask-login
            port:
              number: 5000
